--- a/frontend/InicioSesión.html
+++ b/frontend/InicioSesión.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de sesión usuario</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="iniciosesion.css">
 </head>
 <body>
     <div class="bienvenidousuario">
