--- a/frontend/inicioSesiónVendedor.html
+++ b/frontend/inicioSesiónVendedor.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio de sesión vendedor</title>
-    <link rel="stylesheet" href="/frontend/css/inicioSesiónVendedor.css">
+    <title>Inicio de sesión Vendedor</title>
+    <link rel="stylesheet" href="/frontend/css/iniciosesion.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <div class="bienvenidousuario">
-        <img src="breadspotinicios/3.png" alt="pan3" class="iniciarsesionusuario">
-    </div>
-    <form>
-        <h1>Iniciar Sesión</h1>
-        <div class="formulario">
-
-            <div class="emailusuario">
-                <label for="email">Email:</label> 
-                <input type="email" id="email" name="email">
+    <img src="/frontend/assent/login2.png" alt="Imagen" class="side-image">
+    <section class="container">
+        <div class="container">
+            <div class="login-container">
+                <div class="form-container">
+                    <h1 class="opacity">Iniciar Sesión</h1>
+                    <form>
+                        <input type="email" id="email" name="email" placeholder="Email">
+                        <input type="password" id="contraseña" name="contraseña" placeholder="Contraseña">
+                        <div class="buttonlogin">
+                            <input type="submit" value="Iniciar Sesión">
+                        </div>
+                    </form>
+                </div>
             </div>
-            
-            <div class="contraseñausuario">
-                <label for="contraseña">Contraseña:</label>
-                <input type="password" id="contraseña" name="contraseña">
-            </div>
-
-            <div class="inicioubutton">
-            <input type="submit" value="Iniciar Sesión">
-            </div>
-
         </div>
-    </form>
+    </section>
 </body>
+
 </html>
