--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -1,43 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de usuario</title>
     <link rel="stylesheet" href="/frontend/css/registro.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <div class="bienvenidoabreadspot">
-        <img src="breadspotinicios/2.png" alt="pan2" class="bienvenidoabreadspot">
-    </div>
-    <form>
-        <h1>Registrarte</h1>
-        <div class="formulario">
-
-            <div class="Nombre">
-                <label for="name">Nombre Completo:</label>
-                <input type="text" id="nombre" name="nombre">
-            </div>
-
-            <div class="emailregistro">
-                <label for="email">Email:</label> 
-                <input type="email" id="email" name="email">
-            </div>
-
-            <div class="contraseñausuario">
-                <label for="contraseña">Contraseña:</label>
-                <input type="password" id="contraseña" name="contraseña">
-            </div>
-
-            <div class="contraseñausuario">
-                <label for="contraseña">Confirme contraseña:</label>
-                <input type="password" id="contraseña" name="contraseña">
-            </div>
-
-            <div class="registroubutton">
-                <input type="submit" value="Registrarte">
+    <img src="/frontend/assent/register1.png" alt="Imagen" class="side-image">
+    <section class="container">
+        <div class="container">
+            <div class="login-container">
+                <div class="form-container">
+                    <h1 class="opacity">Registrarte</h1>
+                    <form>
+                        <input type="text" id="nombre" name="nombre" placeholder="Nombre Completo">
+                        <input type="email" id="email" name="email" placeholder="Email">
+                        <input type="password" id="contraseña" name="contraseña" placeholder="Contraseña">
+                        <input type="password" id="contraseña" name="contraseña" placeholder=" Repetir Contraseña">
+                        <div class="buttonlogin">
+                            <input type="submit" value="Registrarte">
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
-    </form>
+    </section>
 </body>
+
 </html>
