--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -15,7 +15,7 @@
     <img src="/frontend/assent/register1.png" alt="Imagen" class="side-image">
     <section class="container">
         <div class="container">
-            <div class="login-container">
+            <div class="registro-container">
                 <div class="form-container">
                     <h1 class="opacity">Registrarte</h1>
                     <form>
