Agrgando cambios xd

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -29,7 +29,7 @@
   <!-- font awesome style -->
   <link href="css/font-awesome.min.css" rel="stylesheet" />
   <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="css/main.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
 
@@ -45,7 +45,7 @@
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
-              ChocoLux
+              BreadSpot
             </a>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -110,11 +110,6 @@
               </a>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="img-box">
-              <img src="images/about-img.png" alt="">
-            </div>
-          </div>
         </div>
       </div>
     </section>
@@ -123,32 +118,13 @@
 
 
     <!-- info section -->
+    <!-- info section -->
     <section class="info_section layout_padding2">
       <div class="container">
         <div class="row info_form_social_row">
           <div class="col-md-8 col-lg-9">
-            <div class="info_form">
-              <form action="">
-                <input type="email" placeholder="Enter your email">
-                <button>
-                  <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                </button>
-              </form>
-            </div>
           </div>
           <div class="col-md-4 col-lg-3">
-
-            <div class="social_box">
-              <a href="">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>
-            </div>
           </div>
         </div>
         <div class="row info_main_row">
@@ -159,77 +135,62 @@
               </h4>
               <div class="info_links_menu">
                 <a href="index.html">
-                  Home
+                  Inicio
                 </a>
                 <a href="about.html">
-                  About
+                  Sobre Nosotros
                 </a>
                 <a href="chocolate.html">
-                  Chocolates
+                  Testimonios
                 </a>
                 <a href="testimonial.html">
-                  Testimonial
+                  Socios
                 </a>
                 <a href="contact.html">
-                  Contact us
+                  Contacto
                 </a>
               </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
-            <div class="info_insta">
+            <div class="info_links">
               <h4>
-                Instagram
+                Redes Sociales 
               </h4>
-              <div class="insta_box">
-                <div class="img-box">
-                  <img src="images/insta-img.png" alt="">
-                </div>
-                <p>
-                  long established fact that a reader
-                </p>
+              <div class="info_links_menu">
+                <a href="index.html">
+                  Instagram
+                </a>
+                <a href="about.html">
+                  Twitter
+                </a>
+                <a href="chocolate.html">
+                  Facebook
+                </a>
               </div>
-              <div class="insta_box">
-                <div class="img-box">
-                  <img src="images/insta-img.png" alt="">
-                </div>
-                <p>
-                  long established fact that a reader
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="info_detail">
-              <h4>
-                Company
-              </h4>
-              <p class="mb-0">
-                when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to
-              </p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
             <h4>
-              Contact Us
+              Contactanos!
             </h4>
             <div class="info_contact">
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  San Martin 666, Concepción, Región del Biobío.
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Llama +56 9 9078 3423
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope"></i>
                 <span>
-                  demo@gmail.com
+                  breadspot@gmail.com
                 </span>
               </a>
             </div>
@@ -248,7 +209,7 @@
       <div class="col-md-11 col-lg-8 mx-auto">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          <a href="https://html.design/">BreadSpot</a>
         </p>
       </div>
     </div>
