--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,7 +59,7 @@
                   <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> Otros</a>
+                  <a class="nav-link" href="about.html">Sobre nosotros</a>
                 </li>
 
                 <li class="nav-item">
@@ -87,6 +87,29 @@
         </div>
       </header>
       <!-- end header section -->
+      <!--user section-->
+      <section>
+        <h1>Bienvenido!</h1>
+        <p>BreadSpot es una aplicación pensada por y para aquellos momentos en los que 
+        nos percatamos de la ausencia del alimento principal del hogar,  durante el desayuno,
+        cena y a veces hasta en el almuerzo de cada familia chilena; es el   pan el que nos acompaña,
+        y el que ubica a chile dentro del top 10 de consumidores de este alimento a nivel mundial,
+        y nosotros te queremos ayudar a que nunca falte en tu mesa.</p>
+        
+        <div class="masinfo">
+          <input type="submit" value="Más información">
+        </div>
+      </div>
+      <div>
+        <h2>Usuario</h2>
+        <input type="submit" value="Iniciar Sesión">
+        <input type="submit" value="Registrarte">
+
+        <h2>Vendedor</h2>
+        <input type="submit" value="Iniciar Sesión">
+        <input type="submit" value="Registrarte">
+      </section>
+      <!--end of user section-->
       <!-- slider section -->
       <section class="slider_section ">
         <div id="customCarousel1" class="carousel slide" data-ride="carousel">
@@ -106,13 +129,13 @@
                         <span>
                           Busca tu panaderia mas cercana Aqui
                         </span>
-                        <img src="/frontend/assent/white-arrow.png" alt="">
+                        <img src="../frontend/assent/white-arrow.png" alt="">
                       </a>
                     </div>
                   </div>
                   <div class="col-md-4 ml-auto">
                     <div class="img-box">
-                      <img src="/frontend/assent/panaderia1.png" alt="">
+                      <img src="../frontend/assent/panaderia1.png" alt="">
                     </div>
                   </div>
                 </div>
@@ -133,13 +156,13 @@
                         <span>
                           Busca tu panaderia mas cercana Aqui
                         </span>
-                        <img src="/frontend/assent/white-arrow.png" alt="">
+                        <img src="../frontend/assent/white-arrow.png" alt="">
                       </a>
                     </div>
                   </div>
                   <div class="col-md-4 ml-auto">
                     <div class="img-box">
-                      <img src="/frontend/assent/panaderia2.png" alt="">
+                      <img src="../frontend/assent/panaderia2.png" alt="">
                     </div>
                   </div>
                 </div>
@@ -160,13 +183,13 @@
                         <span>
                           Busca tu panaderia mas cercana Aqui
                         </span>
-                        <img src="/frontend/assent/white-arrow.png" alt="">
+                        <img src="../frontend/assent/white-arrow.png" alt="">
                       </a>
                     </div>
                   </div>
                   <div class="col-md-4 ml-auto">
                     <div class="img-box">
-                      <img src="/frontend/assent/panaderia3.png" alt="">
+                      <img src="../frontend/assent/panaderia3.png" alt="">
                     </div>
                   </div>
                 </div>
@@ -188,40 +211,8 @@
       <!-- end slider section -->
     </div>
 
-    <!-- about section -->
 
-    <section class="about_section layout_padding ">
-      <div class="container  ">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="detail-box">
-              <div class="heading_container">
-                <h2>
-                  Objetivo de la aplicacion
-                </h2>
-              </div>
-              <p>
-                Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content
-                here, content here', making it look like readable English. Many desktop publishing packages and web
-                pagend web page editors now use Lorem Ipsum as their default model text, </p>
-              <a href="#">
-                <span>
-                  Mas informacion
-                </span>
-                <img src="/frontend/assent/color-arrow.png" alt="">
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="img-box">
-              <img src="/frontend/assent/about-img.png" alt="">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
-    <!-- end about section -->
 
     <!-- client section -->
 
@@ -230,7 +221,7 @@
         <div class="row">
           <div class="col-lg-4 ml-auto">
             <div class="img-box sub_img-box">
-              <img src="/frontend/assent/client-chocolate.png" alt="">
+              <img src="../frontend/assent/client-chocolate.png" alt="">
             </div>
           </div>
           <div class="col-lg-6 px-0">
@@ -245,7 +236,7 @@
                   <div class="carousel-item active">
                     <div class="box">
                       <div class="img-box">
-                        <img src="/frontend/assent/socio1.png" alt="">
+                        <img src="../frontend/assent/socio1.png" alt="">
                       </div>
                       <div class="detail-box">
                         <h4>
@@ -264,7 +255,7 @@
                   <div class="carousel-item">
                     <div class="box">
                       <div class="img-box">
-                        <img src="/frontend/assent/socio2.png" alt="">
+                        <img src="../frontend/assent/socio2.png" alt="">
                       </div>
                       <div class="detail-box">
                         <h4>
@@ -283,7 +274,7 @@
                   <div class="carousel-item">
                     <div class="box">
                       <div class="img-box">
-                        <img src="/frontend/assent/socio3.png" alt="">
+                        <img src="../frontend/assent/socio3.png" alt="">
                       </div>
                       <div class="detail-box">
                         <h4>
@@ -428,7 +419,7 @@
               </h4>
               <div class="insta_box">
                 <div class="img-box">
-                  <img src="/frontend/assent/insta-img.png" alt="">
+                  <img src="../frontend/assent/insta-img.png" alt="">
                 </div>
                 <p>
                   long established fact that a reader
@@ -436,7 +427,7 @@
               </div>
               <div class="insta_box">
                 <div class="img-box">
-                  <img src="/frontend/assent/insta-img.png" alt="">
+                  <img src="../frontend/assent/insta-img.png" alt="">
                 </div>
                 <p>
                   long established fact that a reader
