--- a/frontend/testimonial.html
+++ b/frontend/testimonial.html
@@ -29,7 +29,7 @@
   <!-- font awesome style -->
   <link href="css/font-awesome.min.css" rel="stylesheet" />
   <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="css/main.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
 
@@ -45,7 +45,7 @@
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
-              ChocoLux
+              BreadSpot
             </a>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,15 +55,15 @@
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item ">
-                  <a class="nav-link" href="index.html">Inicio</a>
+                  <a class="nav-link" href="index.html">Inicio </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html"> Sobre Nosotros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="chocolate.html">Testimonios <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="about.html"> Sobre Nosotros  <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="chocolate.html">testimonios</a>
-                </li>
-                <li class="nav-item">
                   <a class="nav-link" href="testimonial.html">Socios</a>
                 </li>
                 <li class="nav-item">
@@ -87,68 +87,106 @@
       <!-- end header section -->
     </div>
 
-    <!-- about section -->
 
-    <section class="about_section layout_padding ">
-      <div class="container  ">
+    <!-- client section -->
+
+    <section class="client_section layout_padding">
+      <div class="container-fluid">
         <div class="row">
-          <div class="col-md-12">
-            <div class="detail-box">
+          <div class="col-lg-12 px-0">
+            <div class="client_container">
               <div class="heading_container">
                 <h2>
-                  Sobre Nosotros
+                  Testimonios de usuarios
                 </h2>
               </div>
-              <p>
-                Nuestro proyecto nace desde la experiencia de ser un consumidor que, 
-               al igual que la mayoría de chilenos, se vio en la necesidad y hasta 
-               algunas veces en la preocupación por conseguir el diariamente consumido pan,
-               el cual muchos podrían asumir o dar por sentado su obtención, pero creemos 
-               firmemente en que no hay peor sentimiento que pasar de la tranquilidad rutinaria 
-               de su compra, a darse cuenta en el último momento de su ausencia, para solucionar esto existe BreadSpot</p>
-              <a href="#">
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="img-box">
-              <img src="images/about-img.png" alt="">
+              <div id="customCarousel2" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <div class="box">
+                      <div class="img-box">
+                        <img src="../frontend/assent/user.jpg" alt="">
+                      </div>
+                      <div class="detail-box">
+                        <h4>
+                          Teresa González
+                        </h4>
+                        <p>
+                          Me ha ayudado incontables veces cuando el tiempo me juega en contra,
+                           ya sea en una carrera contra el tiempo de vuelta de mi trabajo o mostrándome 
+                           la última panadería de mi zona en la que aún había.
+                        </p>
+                        <i class="fa fa-quote-left" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="box">
+                      <div class="img-box">
+                        <img src="../frontend/assent/user.jpg" alt="">
+                      </div>
+                      <div class="detail-box">
+                        <h4>
+                          Javier Lagos
+                        </h4>
+                        <p>
+                          Me salvó completamente la semana pasada, me dirigía a mi negocio de confianza 
+                          en el horario de siempre y para mi sorpresa ya me había quedado sin pan, 
+                          entonces mi hijo me habló de la aplicación y él mismo encontró una panadería
+                          de la que no nos habíamos percatado antes.
+                        </p>
+                        <i class="fa fa-quote-left" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="box">
+                      <div class="img-box">
+                        <img src="../frontend/assent/user.jpg" alt="">
+                      </div>
+                      <div class="detail-box">
+                        <h4>
+                          Pancho Melo
+                        </h4>
+                        <p>
+                          Llegando por primera vez a la zona, me dirigía junto con mi esposa a cenar con mis suegros,
+                           poco pasó hasta que recibimos una llamada de estos últimos, pidiéndonos que por 
+                           favor les llevásemos pan para la cena. La preocupación se apoderó inmediatamente de mi, 
+                           ¿De dónde iba sacar pan a esta hora?, pero mi mujer ya tenía todo planeado, 
+                           en menos de 1 segundo la aplicación le mostró en donde conseguir pan, y las preocupaciones 
+                           se esfumaron junto con el hambre en una grata cena.
+                        </p>
+                        <i class="fa fa-quote-left" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel_btn-box">
+                  <a class="carousel-control-prev" href="#customCarousel2" role="button" data-slide="prev">
+                    <i class="fa fa-arrow-left" aria-hidden="true"></i>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#customCarousel2" role="button" data-slide="next">
+                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- end about section -->
-
+    <!-- end client section -->
 
     <!-- info section -->
     <section class="info_section layout_padding2">
       <div class="container">
         <div class="row info_form_social_row">
           <div class="col-md-8 col-lg-9">
-            <div class="info_form">
-              <form action="">
-                <input type="email" placeholder="Enter your email">
-                <button>
-                  <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                </button>
-              </form>
-            </div>
           </div>
           <div class="col-md-4 col-lg-3">
-
-            <div class="social_box">
-              <a href="">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>
-            </div>
           </div>
         </div>
         <div class="row info_main_row">
@@ -159,77 +197,62 @@
               </h4>
               <div class="info_links_menu">
                 <a href="index.html">
-                  Home
+                  Inicio
                 </a>
                 <a href="about.html">
-                  About
+                  Sobre Nosotros
                 </a>
                 <a href="chocolate.html">
-                  Chocolates
+                  Testimonios
                 </a>
                 <a href="testimonial.html">
-                  Testimonial
+                  Socios
                 </a>
                 <a href="contact.html">
-                  Contact us
+                  Contacto
                 </a>
               </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
-            <div class="info_insta">
+            <div class="info_links">
               <h4>
-                Instagram
+                Redes Sociales 
               </h4>
-              <div class="insta_box">
-                <div class="img-box">
-                  <img src="images/insta-img.png" alt="">
-                </div>
-                <p>
-                  long established fact that a reader
-                </p>
+              <div class="info_links_menu">
+                <a href="index.html">
+                  Instagram
+                </a>
+                <a href="about.html">
+                  Twitter
+                </a>
+                <a href="chocolate.html">
+                  Facebook
+                </a>
               </div>
-              <div class="insta_box">
-                <div class="img-box">
-                  <img src="images/insta-img.png" alt="">
-                </div>
-                <p>
-                  long established fact that a reader
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="info_detail">
-              <h4>
-                Company
-              </h4>
-              <p class="mb-0">
-                when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to
-              </p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
             <h4>
-              Contact Us
+              Contactanos!
             </h4>
             <div class="info_contact">
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  San Martin 666, Concepción, Región del Biobío.
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Llama +56 9 9078 3423
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope"></i>
                 <span>
-                  demo@gmail.com
+                  breadspot@gmail.com
                 </span>
               </a>
             </div>
@@ -248,7 +271,7 @@
       <div class="col-md-11 col-lg-8 mx-auto">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          <a href="https://html.design/">BreadSpot</a>
         </p>
       </div>
     </div>
@@ -263,6 +286,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js"></script>
   <!-- custom js -->
   <script src="js/custom.js"></script>
+  <!-- Google Map -->
 
 </body>
 
