--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,27 +88,7 @@
       </header>
       <!-- end header section -->
       <!--user section-->
-      <section>
-        <h1>Bienvenido!</h1>
-        <p>BreadSpot es una aplicación pensada por y para aquellos momentos en los que 
-        nos percatamos de la ausencia del alimento principal del hogar,  durante el desayuno,
-        cena y a veces hasta en el almuerzo de cada familia chilena; es el   pan el que nos acompaña,
-        y el que ubica a chile dentro del top 10 de consumidores de este alimento a nivel mundial,
-        y nosotros te queremos ayudar a que nunca falte en tu mesa.</p>
-        
-        <div class="masinfo">
-          <input type="submit" value="Más información">
-        </div>
-      </div>
-      <div>
-        <h2>Usuario</h2>
-        <input type="submit" value="Iniciar Sesión">
-        <input type="submit" value="Registrarte">
-
-        <h2>Vendedor</h2>
-        <input type="submit" value="Iniciar Sesión">
-        <input type="submit" value="Registrarte">
-      </section>
+      
       <!--end of user section-->
       <!-- slider section -->
       <section class="slider_section ">
@@ -216,6 +196,33 @@
 
     <!-- client section -->
 
+    <section class="client_section" >
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-12 px-0">
+            <div class="client_container" style="background-color: slateblue !important;">
+              <div class="welcom_container">
+                <h2>
+                  Bienvenido!
+                </h2>
+                <p>BreadSpot es una aplicación pensada por y para aquellos momentos en los que 
+                  nos percatamos de la ausencia del alimento principal del hogar,  durante el desayuno,
+                  cena y a veces hasta en el almuerzo de cada familia chilena; es el   pan el que nos acompaña,
+                  y el que ubica a chile dentro del top 10 de consumidores de este alimento a nivel mundial,
+                  y nosotros te queremos ayudar a que nunca falte en tu mesa.
+                </p>
+              </div>
+              <div class="buttom-other-style">
+                <input class="masinfo" type="submit" value="Más información">
+                <input class="masinfo" type="submit" value="Más información">
+                <input class="masinfo" type="submit" value="Más información">
+                <input class="masinfo" type="submit" value="Más información">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="client_section">
       <div class="container-fluid">
         <div class="row">
@@ -313,7 +320,7 @@
 
     <!-- contact section -->
 
-    <section class="contact_section layout_padding">
+    <!-- <section class="contact_section layout_padding">
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-5 col-lg-4 offset-md-1 offset-lg-2">
@@ -353,7 +360,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- end contact section -->
 
@@ -501,8 +508,8 @@
   <!-- custom js -->
   <script src="js/custom.js"></script>
   <!-- Google Map -->
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
+  <!-- <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script> -->
   <!-- End Google Map -->
 
 </body>
