--- a/frontend/about.html
+++ b/frontend/about.html
@@ -54,20 +54,21 @@
 
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
-                <li class="nav-item ">
-                  <a class="nav-link" href="index.html">Inicio</a>
-                </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="about.html"> Sobre Nosotros  <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="chocolate.html">testimonios</a>
+                  <a class="nav-link" href="about.html">Sobre nosotros</a>
+                </li>
+
+                <li class="nav-item">
+                  <a class="nav-link" href="testimonial.html">Testimonios</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="testimonial.html">Socios</a>
+                  <a class="nav-link" href="socios.html">Socios</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contacto</a>
+                  <a class="nav-link" href="contact.html">Contactos</a>
                 </li>
               </ul>
               <div class="quote_btn-container">
