--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>ChocoLux</title>
+  <title>BreadSpot</title>
 
 
   <!-- bootstrap core css -->
@@ -72,15 +72,9 @@
                   <a class="nav-link" href="contact.html">Contactos</a>
                 </li>
               </ul>
-              <div class="quote_btn-container">
-                <form class="form-inline">
-                  <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
-                    <i class="fa fa-search" aria-hidden="true"></i>
-                  </button>
-                </form>
-                <a href="">
-                  <i class="fa fa-user" aria-hidden="true"></i>
-                </a>
+              <div class="buttom-other-style">
+                <input class="masinfo" type="submit" value="Iniciar Sesión">
+                <input class="masinfo" type="submit" value="Registrarse">
               </div>
             </div>
           </nav>
@@ -105,12 +99,6 @@
                           La mas famosa de Concepcion
                         </span>
                       </h1>
-                      <a href="#">
-                        <span>
-                          Busca tu panaderia mas cercana Aqui
-                        </span>
-                        <img src="../frontend/assent/white-arrow.png" alt="">
-                      </a>
                     </div>
                   </div>
                   <div class="col-md-4 ml-auto">
@@ -132,12 +120,6 @@
                           La mas famosa de San Pedro
                         </span>
                       </h1>
-                      <a href="#">
-                        <span>
-                          Busca tu panaderia mas cercana Aqui
-                        </span>
-                        <img src="../frontend/assent/white-arrow.png" alt="">
-                      </a>
                     </div>
                   </div>
                   <div class="col-md-4 ml-auto">
@@ -159,12 +141,6 @@
                           La mas famosa de Hualpen
                         </span>
                       </h1>
-                      <a href="#">
-                        <span>
-                          Busca tu panaderia mas cercana Aqui
-                        </span>
-                        <img src="../frontend/assent/white-arrow.png" alt="">
-                      </a>
                     </div>
                   </div>
                   <div class="col-md-4 ml-auto">
@@ -213,10 +189,12 @@
                 </p>
               </div>
               <div class="buttom-other-style">
-                <input class="masinfo" type="submit" value="Más información">
-                <input class="masinfo" type="submit" value="Más información">
-                <input class="masinfo" type="submit" value="Más información">
-                <input class="masinfo" type="submit" value="Más información">
+                <h3>Usuario</h3>
+                <input class="masinfo" type="submit" value="Iniciar Sesión">
+                <input class="masinfo" type="submit" value="Registrarse">
+                <h3>Vendedor</h3>
+                <input class="masinfo" type="submit" value="Iniciar Sesión">
+                <input class="masinfo" type="submit" value="Registrarse">
               </div>
             </div>
           </div>
