--- a/frontend/SobreNosotros.html
+++ b/frontend/SobreNosotros.html
@@ -106,121 +106,88 @@
     </div>
 
      <!-- info section -->
-     <section class="info_section layout_padding2">
-        <div class="container">
-          <div class="row info_form_social_row">
-            <div class="col-md-8 col-lg-9">
-              <div class="info_form">
-                <form action="">
-                  <input type="email" placeholder="Enter your email">
-                  <button>
-                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                  </button>
-                </form>
-              </div>
-            </div>
-            <div class="col-md-4 col-lg-3">
-  
-              <div class="social_box">
-                <a href="">
-                  <i class="fa fa-facebook" aria-hidden="true"></i>
+    <!-- info section -->
+    <section class="info_section layout_padding2">
+      <div class="container">
+        <div class="row info_form_social_row">
+          <div class="col-md-8 col-lg-9">
+          </div>
+          <div class="col-md-4 col-lg-3">
+          </div>
+        </div>
+        <div class="row info_main_row">
+          <div class="col-md-6 col-lg-3">
+            <div class="info_links">
+              <h4>
+                Menu
+              </h4>
+              <div class="info_links_menu">
+                <a href="index.html">
+                  Inicio
                 </a>
-                <a href="">
-                  <i class="fa fa-twitter" aria-hidden="true"></i>
+                <a href="about.html">
+                  Sobre Nosotros
                 </a>
-                <a href="">
-                  <i class="fa fa-linkedin" aria-hidden="true"></i>
+                <a href="chocolate.html">
+                  Testimonios
+                </a>
+                <a href="testimonial.html">
+                  Socios
+                </a>
+                <a href="contact.html">
+                  Contacto
                 </a>
               </div>
             </div>
           </div>
-          <div class="row info_main_row">
-            <div class="col-md-6 col-lg-3">
-              <div class="info_links">
-                <h4>
-                  Menu
-                </h4>
-                <div class="info_links_menu">
-                  <a href="index.html">
-                    Inicio
-                  </a>
-                  <a href="about.html">
-                    Otros
-                  </a>
-                  <a href="testimonial.html">
-                    Testimonial
-                  </a>
-                  <a href="testimonial.html">
-                    socios
-                  </a>
-                  <a href="contact.html">
-                    contactos
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-              <div class="info_insta">
-                <h4>
-                  Instagram
-                </h4>
-                <div class="insta_box">
-                  <div class="img-box">
-                    <img src="/frontend/assent/insta-img.png" alt="">
-                  </div>
-                  <p>
-                    long established fact that a reader
-                  </p>
-                </div>
-                <div class="insta_box">
-                  <div class="img-box">
-                    <img src="/frontend/assent/insta-img.png" alt="">
-                  </div>
-                  <p>
-                    long established fact that a reader
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-              <div class="info_detail">
-                <h4>
-                  Company
-                </h4>
-                <p class="mb-0">
-                  when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                  distribution of letters, as opposed to
-                </p>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
+          <div class="col-md-6 col-lg-3">
+            <div class="info_links">
               <h4>
-                Contact Us
+                Redes Sociales 
               </h4>
-              <div class="info_contact">
-                <a href="">
-                  <i class="fa fa-map-marker" aria-hidden="true"></i>
-                  <span>
-                    Location
-                  </span>
+              <div class="info_links_menu">
+                <a href="index.html">
+                  Instagram
                 </a>
-                <a href="">
-                  <i class="fa fa-phone" aria-hidden="true"></i>
-                  <span>
-                    Call +01 1234567890
-                  </span>
+                <a href="about.html">
+                  Twitter
                 </a>
-                <a href="">
-                  <i class="fa fa-envelope"></i>
-                  <span>
-                    demo@gmail.com
-                  </span>
+                <a href="chocolate.html">
+                  Facebook
                 </a>
               </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <h4>
+              Contactanos!
+            </h4>
+            <div class="info_contact">
+              <a href="">
+                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                <span>
+                  San Martin 666, Concepción, Región del Biobío.
+                </span>
+              </a>
+              <a href="">
+                <i class="fa fa-phone" aria-hidden="true"></i>
+                <span>
+                  Llama +56 9 9078 3423
+                </span>
+              </a>
+              <a href="">
+                <i class="fa fa-envelope"></i>
+                <span>
+                  breadspot@gmail.com
+                </span>
+              </a>
             </div>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
+
+    <!-- end info_section -->
   
       <!-- end info_section -->
   
