--- a/frontend/index.html
+++ b/frontend/index.html
@@ -206,7 +206,7 @@
         <div class="row">
           <div class="col-lg-4 ml-auto">
           </div>
-          <div class="col-lg-6 px-0">
+          <div class="col-lg-12 px-0">
             <div class="client_container">
               <div class="heading_container">
                 <h2>
@@ -387,29 +387,31 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-4">
-          <h4>
-            Contactanos!
-          </h4>
-          <div class="info_contact">
-            <a href="">
-              <i class="fa fa-map-marker" aria-hidden="true"></i>
-              <span>
-                San Martin 666, Concepción, Región del Biobío.
-              </span>
-            </a>
-            <a href="">
-              <i class="fa fa-phone" aria-hidden="true"></i>
-              <span>
-                Llama +56 9 9078 3423
-              </span>
-            </a>
-            <a href="">
-              <i class="fa fa-envelope"></i>
-              <span>
-                breadspot@gmail.com
-              </span>
-            </a>
+        <div class="col-md-7 col-lg-4">
+          <div class="info_links">
+            <h4>
+              Contactanos
+            </h4>
+            <div class="info_links_menu">
+              <a href="">
+                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                <span>
+                  San Martin 666, Concepción, Región del Biobío.
+                </span>
+              </a>
+              <a href="">
+                <i class="fa fa-phone" aria-hidden="true"></i>
+                <span>
+                  Llama +56 9 9078 3423
+                </span>
+              </a>
+              <a href="">
+                <i class="fa fa-envelope"></i>
+                <span>
+                  breadspot@gmail.com
+                </span>
+              </a>
+            </div>
           </div>
         </div>
       </div>
