--- a/frontend/index.html
+++ b/frontend/index.html
@@ -172,35 +172,37 @@
 
     <!-- client section -->
 
-    <section class="client_section" >
+    <section class="client_section">
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-12 px-0">
             <div class="client_container" style="background-color: slateblue !important;">
               <div class="welcom_container">
-                <h2>
-                  Bienvenido!
-                </h2>
-                <p>BreadSpot es una aplicación pensada por y para aquellos momentos en los que 
-                  nos percatamos de la ausencia del alimento principal del hogar,  durante el desayuno,
-                  cena y a veces hasta en el almuerzo de cada familia chilena; es el   pan el que nos acompaña,
-                  y el que ubica a chile dentro del top 10 de consumidores de este alimento a nivel mundial,
-                  y nosotros te queremos ayudar a que nunca falte en tu mesa.
-                </p>
-              </div>
-              <div class="buttom-other-style">
-                <h3>Usuario</h3>
-                <input class="masinfo" type="submit" value="Iniciar Sesión">
-                <input class="masinfo" type="submit" value="Registrarse">
-                <h3>Vendedor</h3>
-                <input class="masinfo" type="submit" value="Iniciar Sesión">
-                <input class="masinfo" type="submit" value="Registrarse">
+                <h2>Bienvenido!</h2>
+                <div class="content_container">
+                  <p>BreadSpot es una aplicación pensada por y para aquellos momentos en los que 
+                    nos percatamos de la ausencia del alimento principal del hogar, durante el desayuno,
+                    cena y a veces hasta en el almuerzo de cada familia chilena; es el pan el que nos acompaña,
+                    y el que ubica a chile dentro del top 10 de consumidores de este alimento a nivel mundial,
+                    y nosotros te queremos ayudar a que nunca falte en tu mesa.
+                  </p>
+                  <div class="buttom-other-style">
+                    <h3>Usuario</h3>
+                    <input class="masinfo" type="submit" value="Iniciar Sesión">
+                    <input class="masinfo" type="submit" value="Registrarse">
+                    <h3>Vendedor</h3>
+                    <input class="masinfo" type="submit" value="Iniciar Sesión">
+                    <input class="masinfo" type="submit" value="Registrarse">
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+    
+    
     <section class="client_section">
       <div class="container-fluid">
         <div class="row">
