--- a/frontend/index.html
+++ b/frontend/index.html
@@ -175,7 +175,7 @@
     <section class="client_section">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-12 px-0">
+          <div class="col-lg-12 px-5">
             <div class="client_container" style="background-color: slateblue !important;">
               <div class="welcom_container">
                 <h2>Bienvenido!</h2>
@@ -202,14 +202,101 @@
       </div>
     </section>
     
-    
-    <section class="client_section">
+    <section class="client_section layout_padding" style="padding-top: 0; padding-bottom: 0;">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-12 px-5">
+            <div class="client_container">
+              <div class="heading_container">
+                <h2>
+                  Testimonios de usuarios
+                </h2>
+              </div>
+              <div id="customCarousel2" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <div class="box">
+                      <div class="img-box">
+                        <img src="../frontend/assent/user.jpg" alt="">
+                      </div>
+                      <div class="detail-box">
+                        <h4>
+                          Teresa González
+                        </h4>
+                        <p>
+                          Me ha ayudado incontables veces cuando el tiempo me juega en contra,
+                           ya sea en una carrera contra el tiempo de vuelta de mi trabajo o mostrándome 
+                           la última panadería de mi zona en la que aún había.
+                        </p>
+                        <i class="fa fa-quote-left" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="box">
+                      <div class="img-box">
+                        <img src="../frontend/assent/user.jpg" alt="">
+                      </div>
+                      <div class="detail-box">
+                        <h4>
+                          Javier Lagos
+                        </h4>
+                        <p>
+                          Me salvó completamente la semana pasada, me dirigía a mi negocio de confianza 
+                          en el horario de siempre y para mi sorpresa ya me había quedado sin pan, 
+                          entonces mi hijo me habló de la aplicación y él mismo encontró una panadería
+                          de la que no nos habíamos percatado antes.
+                        </p>
+                        <i class="fa fa-quote-left" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="box">
+                      <div class="img-box">
+                        <img src="../frontend/assent/user.jpg" alt="">
+                      </div>
+                      <div class="detail-box">
+                        <h4>
+                          Pancho Melo
+                        </h4>
+                        <p>
+                          Llegando por primera vez a la zona, me dirigía junto con mi esposa a cenar con mis suegros,
+                           poco pasó hasta que recibimos una llamada de estos últimos, pidiéndonos que por 
+                           favor les llevásemos pan para la cena. La preocupación se apoderó inmediatamente de mi, 
+                           ¿De dónde iba sacar pan a esta hora?, pero mi mujer ya tenía todo planeado, 
+                           en menos de 1 segundo la aplicación le mostró en donde conseguir pan, y las preocupaciones 
+                           se esfumaron junto con el hambre en una grata cena.
+                        </p>
+                        <i class="fa fa-quote-left" aria-hidden="true"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel_btn-box">
+                  <a class="carousel-control-prev" href="#customCarousel2" role="button" data-slide="prev">
+                    <i class="fa fa-arrow-left" aria-hidden="true"></i>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#customCarousel2" role="button" data-slide="next">
+                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="client_section" >
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-4 ml-auto">
           </div>
-          <div class="col-lg-12 px-0">
-            <div class="client_container">
+          <div class="col-lg-12 px-5">
+            <div class="client_container" style="background-color: rgb(111, 117, 234);">
               <div class="heading_container">
                 <h2>
                   Socios
