--- a/frontend/testimonial.html
+++ b/frontend/testimonial.html
@@ -48,7 +48,8 @@
               BreadSpot
             </a>
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class=""> </span>
             </button>
 
@@ -62,7 +63,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="testimonial.html">Testimonios</a>
+                  <a class="nav-link" href="testimonial.html">Testimonios <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="socios.html">Socios</a>
@@ -71,15 +72,9 @@
                   <a class="nav-link" href="contact.html">Contactos</a>
                 </li>
               </ul>
-              <div class="quote_btn-container">
-                <form class="form-inline">
-                  <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
-                    <i class="fa fa-search" aria-hidden="true"></i>
-                  </button>
-                </form>
-                <a href="">
-                  <i class="fa fa-user" aria-hidden="true"></i>
-                </a>
+              <div class="buttom-other-style">
+                <input class="masinfo" type="submit" value="Iniciar Sesión">
+                <input class="masinfo" type="submit" value="Registrarse">
               </div>
             </div>
           </nav>
@@ -184,14 +179,8 @@
     <!-- info section -->
     <section class="info_section layout_padding2">
       <div class="container">
-        <div class="row info_form_social_row">
-          <div class="col-md-8 col-lg-9">
-          </div>
-          <div class="col-md-4 col-lg-3">
-          </div>
-        </div>
         <div class="row info_main_row">
-          <div class="col-md-6 col-lg-3">
+          <div class="col-md-7 col-lg-4">
             <div class="info_links">
               <h4>
                 Menu
@@ -215,7 +204,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3">
+          <div class="col-md-7 col-lg-4">
             <div class="info_links">
               <h4>
                 Redes Sociales 
@@ -233,35 +222,36 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3">
-            <h4>
-              Contactanos!
-            </h4>
-            <div class="info_contact">
-              <a href="">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <span>
-                  San Martin 666, Concepción, Región del Biobío.
-                </span>
-              </a>
-              <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                <span>
-                  Llama +56 9 9078 3423
-                </span>
-              </a>
-              <a href="">
-                <i class="fa fa-envelope"></i>
-                <span>
-                  breadspot@gmail.com
-                </span>
-              </a>
+          <div class="col-md-7 col-lg-4">
+            <div class="info_links">
+              <h4>
+                Contactanos
+              </h4>
+              <div class="info_links_menu">
+                <a href="">
+                  <i class="fa fa-map-marker" aria-hidden="true"></i>
+                  <span>
+                    San Martin 666, Concepción, Región del Biobío.
+                  </span>
+                </a>
+                <a href="">
+                  <i class="fa fa-phone" aria-hidden="true"></i>
+                  <span>
+                    Llama +56 9 9078 3423
+                  </span>
+                </a>
+                <a href="">
+                  <i class="fa fa-envelope"></i>
+                  <span>
+                    breadspot@gmail.com
+                  </span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-
     <!-- end info_section -->
 
   </div>
