--- a/frontend/about.html
+++ b/frontend/about.html
@@ -122,14 +122,8 @@
     <!-- info section -->
     <section class="info_section layout_padding2">
       <div class="container">
-        <div class="row info_form_social_row">
-          <div class="col-md-8 col-lg-9">
-          </div>
-          <div class="col-md-4 col-lg-3">
-          </div>
-        </div>
         <div class="row info_main_row">
-          <div class="col-md-6 col-lg-3">
+          <div class="col-md-7 col-lg-4">
             <div class="info_links">
               <h4>
                 Menu
@@ -153,7 +147,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3">
+          <div class="col-md-7 col-lg-4">
             <div class="info_links">
               <h4>
                 Redes Sociales 
@@ -171,29 +165,31 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3">
-            <h4>
-              Contactanos!
-            </h4>
-            <div class="info_contact">
-              <a href="">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <span>
-                  San Martin 666, Concepción, Región del Biobío.
-                </span>
-              </a>
-              <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                <span>
-                  Llama +56 9 9078 3423
-                </span>
-              </a>
-              <a href="">
-                <i class="fa fa-envelope"></i>
-                <span>
-                  breadspot@gmail.com
-                </span>
-              </a>
+          <div class="col-md-7 col-lg-4">
+            <div class="info_links">
+              <h4>
+                Contactanos
+              </h4>
+              <div class="info_links_menu">
+                <a href="">
+                  <i class="fa fa-map-marker" aria-hidden="true"></i>
+                  <span>
+                    San Martin 666, Concepción, Región del Biobío.
+                  </span>
+                </a>
+                <a href="">
+                  <i class="fa fa-phone" aria-hidden="true"></i>
+                  <span>
+                    Llama +56 9 9078 3423
+                  </span>
+                </a>
+                <a href="">
+                  <i class="fa fa-envelope"></i>
+                  <span>
+                    breadspot@gmail.com
+                  </span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
