--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -117,50 +117,52 @@
     <section class="client_section" style="background-color: rgb(111, 117, 234);">
       <div class="container">
         <div class="heading_container text-center mb-4">
-          <h2>Socios</h2>
+          <h2>¡Contactanos!</h2>
         </div>
         <div class="client_grid">
           <div class="client_container">
             <div class="box">
               <div class="img-box">
-                <img src="../frontend/assent/contacto1.png" alt="Jairo Mella">
+                <img src="../frontend/assent/email2.jpg" alt="email">
               </div>
               <div class="detail-box">
-                <h4>Titulo</h4>
-                <p>Contacto</p>
+                <h4>Email</h4>
+                <p>breadspot@gmail.com</p>
               </div>
             </div>
           </div>
           <div class="client_container">
             <div class="box">
               <div class="img-box">
-                <img src="../frontend/assent/contacto2.png" alt="Carlos Cartagena">
+                <img src="../frontend/assent/phone3333.png" alt="telefono">
               </div>
               <div class="detail-box">
-                <h4>Titulo</h4>
-                <p>Contacto</p>
+                <h4>Télefono</h4>
+                <p>+56 9 9078 3423</p>
               </div>
             </div>
           </div>
           <div class="client_container">
             <div class="box">
               <div class="img-box">
-                <img src="../frontend/assent/contacto3.png" alt="Alan Hidalgo & Marta Clara">
+                <img src="../frontend/assent/redes2.webp" alt="redessociales">
               </div>
               <div class="detail-box">
-                <h4>Titulo</h4>
-                <p>Contacto</p>
+                <h4>Redes Sociales</h4>
+                </i><p>Instagram <br>@BreadSpot</p>
+                </i><p>Twitter <br>@BreadSpot </p>
+                </i><p>Facebook <br>BreadSpot </p>
               </div>
             </div>
           </div>
           <div class="client_container">
             <div class="box">
               <div class="img-box">
-                <img src="../frontend/assent/contacto3.png" alt="Nuevo Socio">
+                <img src="../frontend/assent/direction.png" alt="direccion">
               </div>
               <div class="detail-box">
-                <h4>Titulo</h4>
-                <p>Contacto</p>
+                <h4>Dirección</h4>
+                <p>San Martin 666, Concepción, Región del Biobío.</p>
               </div>
             </div>
           </div>
