--- a/frontend/testimonial.html
+++ b/frontend/testimonial.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>ChocoLux</title>
+  <title>BreadSpot</title>
 
 
   <!-- bootstrap core css -->
@@ -72,10 +72,6 @@
                   <a class="nav-link" href="contact.html">Contactos</a>
                 </li>
               </ul>
-              <div class="buttom-other-style">
-                <input class="masinfo" type="submit" value="Iniciar Sesión">
-                <input class="masinfo" type="submit" value="Registrarse">
-              </div>
             </div>
           </nav>
         </div>
